Development
	Add preference (Interface) Media Resume (Always Ask (default), Always without asking, Never) 
	Allow "Default Volume" (alsa disabled) to be changed
	Set initial volume in gmtk_media_player when passed on command line
	Disable screenshot menu when hardware codec are used with xvmc or vdpau
	Add ability to specify mplayer binary on command line
	Fix problem with screenshot being done twice in mplayer2 GMTK Issue #14
	Updated Korean translation
	Apply patch to make fullscreen work under tiled window managers
	Set pref_volume to stored volume when asound is disabled
	make --volume work with and without softvol enabled
	cmd line option --volume should only work with softvol enabled
	Fix problem with remembered softvol not being loaded Issue #675
1.0.8
	Updated Spanish translation	
	Apply patch from Issue 673
    	Updated German translation
    	Updated Japanese translation
	Updated Portuguese translation
	Set the subtitle visibility in set_media_player_attributes
	Fix fullscreen activation using defined accelerator key
1.0.8b
	Updated Polish translation
	Run make update-po
	Add volume control type display to preference screen
	Update spec.in file for libgda
	Switch back to using CURL instead of GIO for cover art retrieval
	Change "Save" in context menu to "Save As"
	Fix problem with localized positions in mark_uri_in_db_as_resumable 
	Fix libgda compile issue
	Rework database code to use GValues instead of sql commands, should avoid localization issues
	Apply patch from Issue #669 to fix network stream regression
	Hide some items on the context menu, when not under plugin control
	Additional changes to Japanese translation
	Updated Japanese translation
	Updated Polish translation
	Fix Issue #667 - Subtitles not hidden by default when specified
	Updated Korean and Portuguese translations
	Add "Play Single Track from Playlist" under Edit menu
	Mark streams and CDs as playable when adding to playlist