@@ -355,8 +355,8 @@
       <summary>Enable Audio/Video plugin in Nautilus</summary>
       <description>Enable Audio/Video plugin in Nautilus</description>
     </key>
-	<key name="resume-mode" enum="apps.gnome-mplayer.preferences.ResumeMode">
-	  <default>'resume-always-ask'</default>
+	<key name="resume-mode" type="i">
+	  <default>0</default>
 	  <summary>What to do when resuming media</summary>
       <description>What to do whem resuming media</description> 
     </key> 
