@@ -1,4 +1,5 @@
 Development
+	Fix error in committed media resume preference
 	Add preference (Interface) Media Resume (Always Ask (default), Always without asking, Never) 
 	Allow "Default Volume" (alsa disabled) to be changed
 	Set initial volume in gmtk_media_player when passed on command line
